force-app/main/default/objects/Cotizaci_n__c/Cotizaci_n__c.object-meta.xml
<CustomObject>
    <label>Cotización</label>
    <nameField>
        <displayFormat>CZ-{0000000}</displayFormat>
        <label>Código de Cotización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>