force-app/main/default/objects/Cotizaci_n__c/fields/ContadorCambios__c.field-meta.xml
<CustomField>
    <fullName>ContadorCambios__c</fullName>
    <defaultValue>1</defaultValue>
    <label>ContadorCambios</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>