force-app/main/default/objects/Cotizaci_n__c/fields/Descripci_n_Detallada_Componentes_EUR__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Detallada_Componentes_EUR__c</fullName>
    <label>Descripción Detallada Componentes EUR</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>