force-app/main/default/objects/Cotizaci_n__c/fields/Estado_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estado_Cotizaci_n__c</fullName>
    <label>Estado Cotización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Aprobar</fullName>
                <default>true</default>
                <label>Por Aprobar</label>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>