force-app/main/default/objects/Cotizaci_n__c/fields/Fecha_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aprobado__c</fullName>
    <formula>IF(  ISPICKVAL(Estado_Cotizaci_n__c, &quot;Aprobada&quot;)  , TODAY(), Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Aprobado</label>
    <type>Date</type>
</CustomField>