force-app/main/default/objects/Cotizaci_n__c/fields/Fecha_de_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Vencimiento__c</fullName>
    <formula>IF(ISPICKVAL( Vigencia__c , &quot;15 Días&quot;),  DATEVALUE( CreatedDate ) +15, IF(ISPICKVAL( Vigencia__c , &quot;30 Días&quot;),  DATEVALUE( CreatedDate ) +30, IF(ISPICKVAL( Vigencia__c , &quot;60 Días&quot;),  DATEVALUE( CreatedDate ) +60, IF(ISPICKVAL( Vigencia__c , &quot;90 Días&quot;),  DATEVALUE( CreatedDate ) +90, IF(ISPICKVAL( Vigencia__c , &quot;120 Días&quot;),  DATEVALUE( CreatedDate ) +120, IF(ISPICKVAL( Vigencia__c , &quot;150 Días&quot;),  DATEVALUE( CreatedDate ) +150, IF(ISPICKVAL( Vigencia__c , &quot;180 Días&quot;),  DATEVALUE( CreatedDate ) +180, NULL)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>