force-app/main/default/objects/Cotizaci_n__c/fields/Ingeniero_de_OfertasLP__c.field-meta.xml
<CustomField>
    <fullName>Ingeniero_de_OfertasLP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingeniero de Ofertas</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00eHn000001uBx3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>