force-app/main/default/objects/Cotizaci_n__c/fields/IVA_D_lares_USD__c.field-meta.xml
<CustomField>
    <fullName>IVA_D_lares_USD__c</fullName>
    <label>IVA Dólares (USD)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>