force-app/main/default/objects/Cotizaci_n__c/fields/IVA_Euros_EUR__c.field-meta.xml
<CustomField>
    <fullName>IVA_Euros_EUR__c</fullName>
    <label>IVA Euros (EUR)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>