force-app/main/default/objects/Cotizaci_n__c/fields/Nombre_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Proyecto__c</fullName>
    <label>Nombre del Proyecto</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>