force-app/main/default/objects/Cotizaci_n__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>Nombre_del_Proyecto__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la Cuenta</label>
    <type>Text</type>
</CustomField>