force-app/main/default/objects/Cotizaci_n__c/fields/Revisi_n_de_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Revisi_n_de_Cotizaci_n__c</fullName>
    <formula>Name +&quot;-&quot;+&quot;V&quot;+TEXT( ContadorCambios__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revisión de Cotización</label>
    <type>Text</type>
</CustomField>