force-app/main/default/objects/Cotizaci_n__c/fields/Sincronizar_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Sincronizar_Cotizaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronizar Cotización</label>
    <type>Checkbox</type>
</CustomField>