force-app/main/default/objects/Cotizaci_n__c/fields/Total_Componentes_COP__c.field-meta.xml
<CustomField>
    <fullName>Total_Componentes_COP__c</fullName>
    <formula>( Valor_Componentes_COP_Sin_IVA__c + IVA_Pesos_COP__c )* TRM_COP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Componentes COP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>