force-app/main/default/objects/Cotizaci_n__c/fields/Total_Componentes_EUR__c.field-meta.xml
<CustomField>
    <fullName>Total_Componentes_EUR__c</fullName>
    <formula>Valor_Componentes_EUR_Sin_IVA__c + IVA_Euros_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Componentes EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>