force-app/main/default/objects/Cotizaci_n__c/fields/Total_Componentes_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Componentes_USD__c</fullName>
    <formula>Valor_Componentes_USD_Sin_IVA__c + IVA_D_lares_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Componentes USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>