force-app/main/default/objects/Cotizaci_n__c/fields/Total_Cotizacion_Pesos_SinIVa__c.field-meta.xml
<CustomField>
    <fullName>Total_Cotizacion_Pesos_SinIVa__c</fullName>
    <formula>Valor_Componentes_COP_Sin_IVA__c + Valor_Componentes_EUR_Sin_IVA__c*TRM_EUR__c +  Valor_Componentes_USD_Sin_IVA__c*TRM_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Cotización Pesos (Sin IVA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>