force-app/main/default/objects/Cotizaci_n__c/fields/TRM_EUR__c.field-meta.xml
<CustomField>
    <fullName>TRM_EUR__c</fullName>
    <defaultValue>(1)</defaultValue>
    <label>TRM</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>