force-app/main/default/objects/Cotizaci_n__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00eHn000001uBx3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>