force-app/main/default/objects/Cotizaci_n__c/fields/Usuarios__c.field-meta.xml
<CustomField>
    <fullName>Usuarios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuarios</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones2</relationshipName>
    <type>Lookup</type>
</CustomField>