force-app/main/default/objects/Cotizaci_n__c/fields/Valor_Componentes_USD_Sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>Valor_Componentes_USD_Sin_IVA__c</fullName>
    <label>Valor Componentes USD (Sin IVA)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>