force-app/main/default/objects/Cotizaci_n__c/fields/Valor_Cotizaci_n_D_lares_Sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>Valor_Cotizaci_n_D_lares_Sin_IVA__c</fullName>
    <formula>Total_Cotizacion_Pesos_SinIVa__c / TRM_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Cotización Dólares (Sin IVA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>