force-app/main/default/objects/Cotizaci_n__c/fields/Valor_Total_Cotizaci_n_D_lares__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Cotizaci_n_D_lares__c</fullName>
    <formula>Valor_Cotizaci_n_D_lares_Sin_IVA__c + IVA_D_lares_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Cotización Dólares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>