force-app/main/default/objects/Cotizaci_n__c/fields/Valor_Total_Cotizaci_n_Euros__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Cotizaci_n_Euros__c</fullName>
    <formula>Valor_Cotizaci_n_Euros_Sin_IVA__c + IVA_Euros_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Cotización Euros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>