force-app/main/default/objects/Cotizaci_n__c/fields/Valor_Total_Cotizaci_n_Pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Cotizaci_n_Pesos__c</fullName>
    <formula>Total_Cotizacion_Pesos_SinIVa__c + IVA_Pesos_COP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Cotización Pesos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>