force-app/main/default/objects/Cotizaci_n__c/fields/Valores_est_n_Correctos__c.field-meta.xml
<CustomField>
    <fullName>Valores_est_n_Correctos__c</fullName>
    <label>¿Valores están Correctos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>