force-app/main/default/objects/Cotizaci_n__c/validationRules/Sincronizar_Cotizacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Sincronizar_Cotizacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Sincronizar_Cotizaci_n__c =TRUE, ISPICKVAL( Estado_Cotizaci_n__c , &quot;Por Aprobar&quot;) )</errorConditionFormula>
    <errorDisplayField>Sincronizar_Cotizaci_n__c</errorDisplayField>
    <errorMessage>La cotización debe estar aprobada para poder sincronizarse.</errorMessage>
</ValidationRule>