force-app/main/default/objects/Cotizaci_n__c/validationRules/Validacion_Basicos.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Basicos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISBLANK( Margen_de_Venta__c ),   ISPICKVAL( Vigencia__c , &quot;&quot;),  ISPICKVAL( Ingeniero_de_Ofertas__c , &quot;&quot;)    ), ISPICKVAL( Estado_Cotizaci_n__c , &quot;Aprobada&quot;) )</errorConditionFormula>
    <errorMessage>Por favor diligencie todos los campos existentes en la sección &quot;Información General&quot;.</errorMessage>
</ValidationRule>