force-app/main/default/objects/Cotizaci_n__c/validationRules/ValidacionComponentesCOP.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacionComponentesCOP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISBLANK( Descripci_n_Detallada_Componentes_Peso__c ),  ISBLANK( IVA_Pesos_COP__c ),  ISBLANK( TRM_COP__c ),  ISBLANK( Valor_Componentes_COP_Sin_IVA__c )    ), ISPICKVAL( Estado_Cotizaci_n__c , &quot;Aprobada&quot;) )</errorConditionFormula>
    <errorMessage>Por favor diligencie todos los componentes de la Sección &quot;Valor Componentes COP&quot; como mínimo para poder continuar con el proceso.</errorMessage>
</ValidationRule>