force-app/main/default/objects/Cotizaci_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>Nombre_del_Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Estado_Cotizaci_n__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Valor_Total_Cotizaci_n_Pesos__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cotizaciones</label>
</ListView>