force-app/main/default/objects/Cotizaci_n__c/listViews/Cotizaciones_de_Luis_Figueroa.listView-meta.xml
<ListView>
    <fullName>Cotizaciones_de_Luis_Figueroa</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_Vencimiento__c</columns>
    <columns>Ingeniero_de_Ofertas__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Usuarios__c</field>
        <operation>equals</operation>
        <value>Luis Figueroa</value>
    </filters>
    <label>Cotizaciones de Luis Figueroa</label>
    <sharedTo>
        <group>Administradores</group>
    </sharedTo>
</ListView>